--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 WEBHOOK_URL=https://discord.com/api/webhooks/demo/demo
-IGNORE_SUBJECTS=["Biotonne"] # Cant yet ignore Sonderabfall
+IGNORE_SUBJECTS= #Cant yet ignore Sonderabfall - leave empty if all should be sent
 ALL_NOTIFICATION_SUBJECTS = ["Restmüll + Gelber-Sack", "Papiertonne", "Biotonne", "Gelber-Sack", "Sonderabfall Abgabestelle"]
 CSV_FILE_PATH=Reichelsheim-Reichelsheim-2024.csv  # URL to get the CSV: https://www.reso-gmbh.de/abfuhrplaene/ ( german Excel (Semicolon separated))
 
